# amogifier

./: Makefile  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: deploy.yml
amogus/: Cargo.toml
amogus/src/: lib.rs
public/: style.css
src/: main.ts  style.css
