[package]
name = "sus"
version = "0.1.0"
authors = ["xarantolus <xarantolus@protonmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
image = { version = "0.24", features = ["png", "jpeg", "avif", "webp", "gif"], default-features = false }
rexif = { version = "0.7", default-features = false }

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]

# Optimize for size
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.release.package."*"]
opt-level = "s"
